--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
                             cell2 ="";
                             dia = "";
 
-                        x = 2;
                           for (let j = 0; j < tecnico_9.length; j++) {
-                            //tabela.innerHTML = "";
+                            tabela.innerHTML = "";
                             row2 = tabela.insertRow(); // cria a linha
                             cell3 = row2.insertCell(); // cria uma célula na linha
                             cell4 = row2.insertCell(); // cria uma célula na linha
@@ -61,11 +60,6 @@
                                 cell2 = row.insertCell(); // cria uma célula na linha
                                 cell1.innerHTML = tecnico_9[i] // na célula passa o valor 
                                 cell2.innerHTML = tecnico_10[i] // na célula passa o valor
-                            }
-
-                            if(x == 1){
-                                break
-                                x = 2;
                             }
                             atualizar();                            
                              
