--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             dia = "";
 
                           for (let j = 0; j < tecnico_9.length; j++) {
-                            tabela.innerHTML = "";
+                            //tabela.innerHTML = "";
                             row2 = tabela.insertRow(); // cria a linha
                             cell3 = row2.insertCell(); // cria uma célula na linha
                             cell4 = row2.insertCell(); // cria uma célula na linha
