--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 cell1.innerHTML = tecnico_9[i] // na célula passa o valor 
                                 cell2.innerHTML = tecnico_10[i] // na célula passa o valor
                             }
-                            atualizar();                            
+                            //atualizar();                            
                              
                           }     
                            function listar(){ 
