--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body onload="atendimento()">  
         <div class="contaner">
             <div class="lista">
+                <h2>Fila de atendimento IT2B</h2>
                 <div class="header" id="data">
                 
                 </div>
