--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
        
     </body>
 </html>
-
+<script src="FileSaver.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
